[package]
name = "rodo"
version = "0.1.0"
edition = "2018"

[profile.dev]
opt-level = 0

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.6", features = ["derive"] }
colored = "2.0.0"
directories = "4.0.1"
rusqlite = "0.27.0"
